#176 Second Highest Salary: https://leetcode.com/problems/second-highest-salary/

--- a/DatabaseProblems/Leetcode.Problems.Database.csproj
+++ b/DatabaseProblems/Leetcode.Problems.Database.csproj
@@ -14,4 +14,8 @@
         <PackageReference Include="NUnit3TestAdapter" Version="5.2.0" />        
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="176-Second-Highest-Salary\Models\" />
+    </ItemGroup>
+
 </Project>
